<resources>
    <string name="app_name">SwooshAlpha</string>
    <string name="wlcmbg">wlcmbg</string>
    <string name="soowshlogo">soowshlogo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_dominate_the_league"><![CDATA[Find a team in your city & dominate the league.]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="mensa">Mens</string>
    <string name="mensb">Mens</string>
    <string name="mensc">Mens</string>
    <string name="womensa">Womens</string>
    <string name="womensb">Womens</string>
    <string name="womensc">Womens</string>
    <string name="co_edc">Co-Ed</string>
    <string name="co_edb">Co-Ed</string>
    <string name="co_eda">Co-Ed</string>
    <string name="desiredlgbg">TODO</string>
    <string name="next">NEXT</string>
    <string name="desired_league">Desired League</string>
    <string name="beginnera">BEGINNER</string>
    <string name="BEGINNERb">BEGINNER</string>
    <string name="BEGINNERc">BEGINNER</string>
    <string name="BALLERa">BALLER</string>
    <string name="BALLERb">BALLER</string>
    <string name="BALLERc">BALLER</string>
    <string name="bgnrblrbg">TODO</string>
    <string name="i_am_a">I am a:</string>
    <string name="finish">FINISH</string>
    <string name="fnshbg">TODO</string>
</resources>
