<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bappi.swooshalpha.ActivityController.LeagueActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/desiredleaguebg"
        android:contentDescription="@string/desiredlgbg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo"
        android:contentDescription="@string/soowshlogo" />

    <TextView
        android:id="@+id/DesiredLeaguetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/desired_league"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DesiredLeaguetxt">

        <ToggleButton
            android:id="@+id/mensButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/toggle_button"
            android:fontFamily="@font/montserrat"
            android:onClick="MensClicked"
            android:text="@string/mensc"
            android:textColor="@android:color/white"
            android:textOff="@string/mensa"
            android:textOn="@string/mensb"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/womensButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/toggle_button"
            android:fontFamily="@font/montserrat"
            android:onClick="WomensClicked"
            android:text="@string/womensc"
            android:textColor="@android:color/white"
            android:textOff="@string/womensa"
            android:textOn="@string/womensb"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/coedButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/toggle_button"
            android:fontFamily="@font/montserrat"
            android:onClick="CoedClicked"
            android:text="@string/co_edc"
            android:textColor="@android:color/white"
            android:textOff="@string/co_eda"
            android:textOn="@string/co_edb"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/Nextbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/montserrat"
        android:onClick="NextButtonClicked"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
